--- a/index.html
+++ b/index.html
@@ -383,13 +383,20 @@ Reveal.addEventListener( 'customevent', function() {
 
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
+
+
+			// Auto slide 3 sec
+			// https://github.com/hakimel/reveal.js/issues/59
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
 				center: true,
+				autoSlide: 10000,
+				hideAddressBar: true,
+				loop: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				transition: 'fade', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
