Huge blob commit

--- a/index.html
+++ b/index.html
@@ -1,221 +1,23 @@
-<!doctype html>
-<html lang="en">
-
-	<head>
-		<meta charset="utf-8">
-
-		<title>reveal.js - The HTML Presentation Framework</title>
-
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
-
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-
-		<link rel="stylesheet" href="reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="reveal.js/css/theme/black.css" id="theme">
-
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal.js/css/print/pdf.css' : 'reveal.js/css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-
-		<style type="text/css">
-		 img.centered {
-		   display: block; 
-		   margin-left: auto ! important;	  
-		    margin-right: auto ! important;
-		  }
-
-		  p.small {
-		  font-size: 70%;
-		  }
-		</style>
-
-	</head>
-
-	<body>
-
-		<div class="reveal">
-
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-
-
-			<section data-markdown>
-			    <script type="text/template">
-				## B-Sides Ljubljana
-				12th March 2015
-
-
-				`#BSidesLjubljana`
-			    </script>
-			</section>
-
-			<section>
-			  <h2>Leading sponsor</h2>
-			  <img src="img/viris.png" alt="" />
-			</section>
-
-			<section>
-			  <h3>Supporting sponsor</h3>
-			  <img src="img/stackstorm.png" alt="" />
-			</section>
-
-
-			<section>
-			  <h3>Wireless/networking sponsors</h3>
-			  <img src="img/aero.png" alt="" />
-			  <img src="img/aerohive.png" alt="" />
-			</section>
-
-			<section>
-			  <h3>Community sponsors</h3>
-			  <div>
-			    <p class="small">Local hackerspace Cyberpipe/Kiberpipa</p>
-			    <img class="centered" src="img/kiberpipa.png" alt="" />
-			    <p class="small">Linux User Group of Slovenia – LUGOS</p>
-			    <img class="centered" src="img/lugos.png" alt="" />
-			    <p class="small">Cloud Security Alliance Slovenian Chapter</p>
-			    <img class="centered" src="img/csa.png" alt="" />
-			    <p class="small">Hekovnik for hosting workshops</p>
-			    <img class="centered" src="img/hekovnik.png" alt="" />
-			  </div>
-			</section>
-
-			<section>
-			  <h3>Schedule</h3>
-
-			  <table style="font-size: 50%" cellspacing="0">
-			    <tr>
-			      <th>ID</th>
-			      <th>Talk</th>
-			      <th>Start Time</th>
-			    </tr>
-			    <tr>
-			      <td>1</td>
-			      <td>Forging the USB armory – Creating an open source secure flash-drive-sized computer (Andrea Barisani)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>2</td>
-			      <td>Cold War Spy Techniques and Moscow Rules for Cybersecurity (Alper Basaran)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>3</td>
-			      <td>IoT IT Security and Secure Development Life Cycle (Christopher Scheuring)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>4</td>
-			      <td>EU’s biggest Cyber Security Exercise – Cyber Europe 2014 (Razvan Gavrila)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>5</td>
-			      <td>The wrong side of history – everything that is old is new again (Arron “finux” Finnon)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>6</td>
-			      <td>Uncovering secret connections among online attackers using network theory and custom honeypots (Pedram Hayati)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>7</td>
-			      <td>Automated security scanning and remediation in the cloud using StackStorm (Tomaž Muraus)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>8</td>
-			      <td>Fully deterministic & verifiable linux distro (Jaka Hudoklin)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>9</td>
-			      <td>2014 – Year of Broken Name Generator(s) (Miroslav Štampar)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>10</td>
-			      <td>Deep and dark web – demystifying differences and explaining key 2014 events (Jurica Čular)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>11</td>
-			      <td>Low-Tech High-Intensity Phishing Attacks on Slovenian Banks (Gorazd Božič)</td>
-			      <td></td>
-			    </tr>
-			    <tr>
-			      <td>12</td>
-			      <td>Invisible packets (Milan Gabor & Danijel Grah)</td>
-			      <td></td>
-			    </tr>
-			  </table>
-			</section>
-
-
-			<section>
-
-			  <h3>Twitter</h3>
-<div class="stretch">
-  <iframe frameborder=0 width=95% height=95% marginheight=0 marginwidth=0 scrolling=no src="http://0.0.0.0:8082?search_term=bsidesljubljana&tweet_number=4&view_type=full"></iframe>
-</div>
-
-			</section>
-
-			</div>
-
-		</div>
-
-		<script src="reveal.js/lib/js/head.min.js"></script>
-		<script src="reveal.js/js/reveal.js"></script>
-
-		<script>
-
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-
-
-			// Auto slide 3 sec
-			// https://github.com/hakimel/reveal.js/issues/59
-			Reveal.initialize({
-				controls: false,
-				progress: true,
-				history: true,
-				center: true,
-				autoSlide: 10000,
-				hideAddressBar: true,
-				loop: true,
-
-				transition: 'fade', // none/fade/slide/convex/concave/zoom
-
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'reveal.js/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'reveal.js/plugin/zoom-js/zoom.js', async: true },
-					{ src: 'reveal.js/plugin/notes/notes.js', async: true }
-				]
-			});
-
-		</script>
-
-	</body>
+<html>
+  <head>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script>
+      $(document).ready(function(){
+        var locations = ["title.html", "viris.html", "twitter.html",
+          "stackstorm.html",
+          "aero.html",
+          "schedule.html",
+        ];
+        var len = locations.length;
+        var iframe = $('#frame');
+        var i = 0;
+        setInterval(function () {
+            iframe.attr('src', locations[++i % len]);
+        }, 10000);
+      });
+    </script>
+  </head>
+  <body style="margin: 0px;">
+    <iframe id="frame" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+  </body>
 </html>
