--- a/schedule.html
+++ b/schedule.html
@@ -82,6 +82,13 @@
         </tr>
       </tbody>
     </table>
+    <script>
+      var elements = document.getElementsByTagName('a');
 
+      for (var i = 0, len = elements.length; i < len; i++)
+      {
+        elements[i].removeAttribute('title');
+      }
+    </script>
   </body>
 </html>
