--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           ["twitter.html", 15000],
           ["stackstorm.html", 10000],
           ["aero.html", 10000],
+          ["comulus.html", 10000],
           ["comu.html", 10000],
           ["schedule.html", 10000],
           ["http://10.14.10.10", 10000],
