--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           ["stackstorm.html", 10000],
           ["aero.html", 10000],
           ["comulus.html", 10000],
+          ["stacklab.html", 10000],
           ["comu.html", 10000],
           ["schedule.html", 10000],
           ["http://10.14.10.10", 10000],
