--- a/aero.html
+++ b/aero.html
@@ -7,7 +7,7 @@
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body>
-      <img class="centered" style="left: 200px; zoom: 1.8;" src="img/aero.png" alt="" />
-      <img class="centered" style="right: 200px" src="img/aerohive.png" alt="" />
+      <img class="centered" style="left: 250px; zoom: 2.2;" src="img/aero.png" alt="" />
+      <img class="centered" style="right: 250px; zoom: 1.8" src="img/aerohive.png" alt="" />
 </body>
 </html>
