--- a/title.html
+++ b/title.html
@@ -7,6 +7,6 @@
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body style="background-color: #008000;">
-      <img class="centered" src="img/bsides.png" alt="" />
+      <img class="centered"  style="zoom: 2.0;" src="img/bsides.png" alt="" />
 </body>
 </html>
