--- a/twitter.html
+++ b/twitter.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1 class="text-center">Twitter</h1>
+    <h1 class="text-center">BSidesLjubljana</h1>
 
         <a class="twitter-timeline" data-chrome="nofooter noheader noborders noscrollbar"  data-tweet-limit="7" width="1000" height="1000" href="https://twitter.com/hashtag/bsidesljubljana" data-widget-id="575399933517365250">#bsidesljubljana Tweets</a>
     
