--- a/aero.html
+++ b/aero.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body>
+<body class="scene_element--fadein">
       <img class="centered" style="left: 250px; zoom: 2.2;" src="img/aero.png" alt="" />
       <img class="centered" style="right: 250px; zoom: 1.8" src="img/aerohive.png" alt="" />
 </body>
