--- a/comu.html
+++ b/comu.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body>
+<body class="scene_element--fadein">
       <img class="centered" style="left: 340px; top: 240px" src="img/csa.png" alt="" />
       <img class="centered" style="right: 340px; top: 300px; zoom: 1.2" src="img/hekovnik.png" alt="" />
       <img class="centered" style="left: 300px; margin-top:20vh" src="img/kiberpipa.png" alt="" />
