--- a/comulus.html
+++ b/comulus.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body style="background-color: #00833b;">
+<body class="scene_element--fadein" style="background-color: #00833b;">
       <img class="centered" style="zoom: 1;" src="img/comulus.png" alt="" />
 </body>
 </html>
