--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="scene_element--fadein">
 
     <table class="centered" border="1" cellpadding="1" cellspacing="1" style="width: 80%; font-size: 140%;">
       <thead>
