--- a/stacklab.html
+++ b/stacklab.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body >
+<body class="scene_element--fadein" >
   <div class="centered" style="zoom: 0.5" >
       <img style=" margin: 0 auto;" src="img/stacklab.png" alt="" />
       <h1 class="text-center" >Interested in OpenStack and Linux ?</h1>
