--- a/stackstorm.html
+++ b/stackstorm.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body>
+<body class="scene_element--fadein">
       <img class="centered" src="img/stackstorm.png" alt="" />
 </body>
 </html>
