--- a/title.html
+++ b/title.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body style="background-color: #008000;">
+<body class="scene_element--fadein" style="background-color: #008000;">
       <img class="centered"  style="zoom: 2.0;" src="img/bsides.png" alt="" />
 </body>
 </html>
