--- a/twitter.html
+++ b/twitter.html
@@ -5,21 +5,22 @@
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <script type="text/javascript" src="jquery.js"></script>
     <style>
-        #twitter-widget-0 {
-            width: 1200px !important ;
-            display: block !important ;
-            margin-left: auto !important ;
-            margin-right: auto !important ;
-        }
+
+    .fill{
+      width:100%;
+      height:6000;
+      min-height:100%;
+      padding:10px;
+    }
+
     </style>
 </head>
-<body>
-    <h1 class="text-center">#BSidesLjubljana</h1>
+<body class="scene_element--fadein">
 
-        <a class="twitter-timeline" data-chrome="nofooter noheader noborders noscrollbar"  data-tweet-limit="7" width="1000" height="1000" href="https://twitter.com/hashtag/bsidesljubljana" data-widget-id="575399933517365250">#bsidesljubljana Tweets</a>
-    
-  
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      <a class="twitter-grid" href="https://twitter.com/TwitterDev/timelines/539487832448843776">National Park Tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<div id="bottom"></div>
 </body>
 </html>
