Fix html classes

--- a/title.html
+++ b/title.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title></title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein" style="background-color: #008000;">
-      <img class="centered"  style="zoom: 2.0;" src="img/bsides.png" alt="" />
+      <div class="vh10"></div>
+      <img class="center-block vh70" src="img/bsides.png" alt="" />
 </body>
 </html>
