--- a/viris.html
+++ b/viris.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title></title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein" style="background-color: #000000;">
-      <img class="centered" src="img/viris.png" alt="" />
+      <div class="vh25"></div>
+      <img class="center-block vh40" src="img/viris.png" alt="" />
 </body>
 </html>
