--- a/cltre.html
+++ b/cltre.html
@@ -7,8 +7,7 @@
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein">
-      <div class="vh30"></div>
-      <img class="center-block  vh15"  src="img/aero.png" alt="" />
-      <img class="center-block vh15" src="img/aerohive.png" alt="" />
+  <div class="vh30"></div>
+      <img class="center-block vh25"  src="img/clt.png" alt="" />
 </body>
 </html>
