--- a/comu.html
+++ b/comu.html
@@ -5,11 +5,22 @@
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <style>
+    img {
+      margin:20px auto;
+    }
+    </style>
 </head>
 <body class="scene_element--fadein">
-      <img class="centered" style="left: 340px; top: 240px" src="img/csa.png" alt="" />
-      <img class="centered" style="right: 340px; top: 300px; zoom: 1.2" src="img/hekovnik.png" alt="" />
-      <img class="centered" style="left: 300px; margin-top:20vh" src="img/kiberpipa.png" alt="" />
-      <img class="centered" style="right: 300px; margin-top:22vh " src="img/lugos.png" alt="" />
+  <div class="vh20"></div>
+  <div class="row">
+      <img class="center-block vh10" src="img/csa.png" alt="" />
+      <img class="center-block vh10"  src="img/poligon.jpg" alt="" />
+  </div>
+
+
+      <img class="center-block vh10 "  src="img/lugos.png" alt="" />
+      <img class="center-block vh10 "  src="img/kiberpipa.png" alt="" />
+      <img class="center-block vh15 "  src="img/hamburg.jpg" alt="" />
 </body>
 </html>
