--- a/monitor.html
+++ b/monitor.html
@@ -8,7 +8,6 @@
 </head>
 <body class="scene_element--fadein">
       <div class="vh30"></div>
-      <img class="center-block  vh15"  src="img/aero.png" alt="" />
-      <img class="center-block vh15" src="img/aerohive.png" alt="" />
+      <img class="center-block vh20" src="img/logo-monitor.png" alt="" />
 </body>
 </html>
