--- a/arnes.html
+++ b/arnes.html
@@ -7,8 +7,9 @@
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein">
-      <div class="vh30"></div>
-      <img class="center-block  vh15"  src="img/aero.png" alt="" />
-      <img class="center-block vh15" src="img/aerohive.png" alt="" />
+      <div class="vh20"></div>
+      <img class="center-block vh15" src="img/arnes.svg" alt="" />
+      <img class="center-block vh15" src="img/sicert.svg" alt="" />
+      <img class="center-block vh15" src="img/register.svg" alt="" />
 </body>
 </html>
