--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="css/custom.css" rel="stylesheet">
     <script type="text/javascript" src="jquery.js"></script>
     <script>
       $(document).ready(function(){
