--- a/time.html
+++ b/time.html
@@ -21,10 +21,10 @@
   <link href="css/custom.css" rel="stylesheet">
 </head>
 
-<body onload="startTime()">
+<body onload="startTime()" style="background-color: black;">
 
   <div class="vh30"></div>
-  <div id="txt" class="vh25 center-text" style="font-family: monospace"></div>
+  <div id="txt" class="vh25 center-text" style="font-family: monospace; color: white; "></div>
 
 </body>
 </html>
