--- a/title.html
+++ b/title.html
@@ -5,7 +5,7 @@
     <title></title>
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body class="scene_element--fadein" style="background-color: #008000;">
+<body class="scene_element--fadein" style="background-color: black;">
       <div class="vh10"></div>
       <img class="center-block vh70" src="img/bsides.png" alt="" />
 </body>
