--- a/comu.html
+++ b/comu.html
@@ -12,15 +12,15 @@
     </style>
 </head>
 <body class="scene_element--fadein">
-  <div class="vh20"></div>
+  <div class="vh5"></div>
   <div class="row">
       <img class="center-block vh10" src="img/csa.png" alt="" />
       <img class="center-block vh10"  src="img/poligon.jpg" alt="" />
   </div>
 
-
+      <img class="center-block vh15 "  src="img/hamburg.png" alt="" />
+      <img class="center-block vh5 "  src="img/sectalk.png" alt="" />
       <img class="center-block vh10 "  src="img/lugos.png" alt="" />
       <img class="center-block vh10 "  src="img/kiberpipa.png" alt="" />
-      <img class="center-block vh15 "  src="img/hamburg.jpg" alt="" />
 </body>
 </html>
