--- a/index.html
+++ b/index.html
@@ -16,18 +16,25 @@
         var locations = [
           ["title.html", 30000],
           ["arnes.html", 40000],
-          ["viris.html", 40000],
-          ["cltre.html", 20000],
+          ["elttam.html", 40000],
+
+          ["viris.html", 30000],
+
+          ["comtrade.html", 20000],
+          ["virtua.html", 20000],
           ["aero.html", 15000],
+
           ["monitor.html", 10000],
+          ["netsec.html", 10000],
+
           ["comu.html", 15000],
           ["http://history.brodul.org:3001/?term=%23bsidesljubljana", 120000],
-          ["http://viris.brodul.org/", 80000],
-          ["http://10.14.126.15", 120000],
+          // ["http://viris.brodul.org/", 80000],
+          // ["http://10.14.126.15", 120000],
           ["time.html", 20000],
           // ["comulus.html", 2000],
           // ["stacklab.html", 2000],
-          // ["schedule.html", 2000],
+          ["schedule.html", 20000],
           // ["http://10.14.10.10", 9000],
           // ["http://viris.brodul.org", 2000],
         ];
