--- a/virtua.html
+++ b/virtua.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title></title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein">
-  <div class="vh30"></div>
-      <img class="center-block vh25"  src="img/clt.png" alt="" />
+      <div class="vh25"></div>
+      <img class="center-block vh40" src="img/virtua.png" alt="" />
 </body>
 </html>
