Fixes as req in mail from lowkey

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           ["viris.html", 30000],
 
           ["comtrade.html", 20000],
-          ["virtua.html", 20000],
-          ["aero.html", 15000],
+          // ["virtua.html", 20000],
+          // ["aero.html", 15000],
 
           ["monitor.html", 10000],
           ["netsec.html", 10000],
