--- a/comtrade.html
+++ b/comtrade.html
@@ -6,7 +6,10 @@
     <link href="css/custom.css" rel="stylesheet">
 </head>
 <body class="scene_element--fadein">
-      <div class="vh25"></div>
-      <img class="center-block vh40" src="img/comtrade.jpg" alt="" />
+      <div class="vh10"></div>
+      <img class="center-block vh20" src="img/comtrade.jpg" alt="" />
+      <img class="center-block vh10" src="img/virtua.png" alt="" />
+      <div class="vh5"></div>
+      <img class="center-block  vh10"  src="img/aero.png" alt="" />
 </body>
 </html>
