--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var locations = [
           ["title.html", 30000],
           ["arnes.html", 40000],
-          ["elttam.html", 40000],
+          // ["elttam.html", 40000],
 
           ["viris.html", 30000],
 
