--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             setTimeout( function() {
               iframe.fadeIn("slow", function () {
                 interval = setInterval(recursionLove,
-                              locations[i % len][1]);
+                              locations[i % len][1]/20);
               });
             }, 300);
           });
