--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
           ["viris.html", 30000],
 
-          ["comtrade.html", 20000],
+          // ["comtrade.html", 20000],
           // ["virtua.html", 20000],
           // ["aero.html", 15000],
 
-          ["monitor.html", 10000],
+          // ["monitor.html", 10000],
           ["netsec.html", 10000],
 
           ["comu.html", 15000],
