Add to aws index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         var locations = [
           ["title.html", 30000],
+          ["aws.html", 50000],
           ["arnes.html", 40000],
           // ["elttam.html", 40000],
 
