--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           ["title.html", 30000],
           ["aws.html", 50000],
           ["arnes.html", 40000],
+          ["3fs.html", 30000],
           // ["elttam.html", 40000],
 
           ["viris.html", 30000],
