--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           ["aws.html", 50000],
           ["arnes.html", 40000],
           ["3fs.html", 30000],
+          ["xlab.html", 30000],
           // ["elttam.html", 40000],
 
           ["viris.html", 30000],
