--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             setTimeout( function() {
               iframe.fadeIn("slow", function () {
                 interval = setInterval(recursionLove,
-                              locations[i % len][1]);
+                              locations[i % len][1]/10);
               });
             }, 300);
           });
