--- a/xlab.html
+++ b/xlab.html
@@ -7,6 +7,7 @@
 </head>
 <body class="scene_element--fadein" style="background-color: white;">
       <div class="vh25"></div>
-      <img class="center-block vh40" src="img/xlab.png" alt="" />
+      <img class="center-block vh15" src="img/xlab.png" alt="" />
+      <img class="center-block vh40" src="img/3fs.svg" alt="" />
 </body>
 </html>
