--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         var locations = [
           ["title.html", 30000],
-          ["aws.html", 50000],
+          ["aws.html", 60000],
           ["arnes.html", 40000],
-          ["3fs.html", 30000],
+          // ["3fs.html", 30000],
           ["xlab.html", 30000],
           // ["elttam.html", 40000],
 
