--- a/time.html
+++ b/time.html
@@ -10,7 +10,7 @@
     m = checkTime(m);
     s = checkTime(s);
     document.getElementById('txt').innerHTML =
-    h + ":" + m + ":" + s;
+    h +1 + ":" + m + ":" + s;
     var t = setTimeout(startTime, 500);
   }
   function checkTime(i) {
@@ -23,7 +23,8 @@
 
 <body onload="startTime()" style="background-color: black;">
 
-  <div class="vh30"></div>
+  <div class="vh5"></div>
+  <p class="vh25 center-text" style="font-family: monospace; color: white; ">Localtime:</p>
   <div id="txt" class="vh25 center-text" style="font-family: monospace; color: white; "></div>
 
 </body>
