--- a/time.html
+++ b/time.html
@@ -23,8 +23,9 @@
 
 <body onload="startTime()" style="background-color: black;">
 
-  <div class="vh5"></div>
-  <p class="vh25 center-text" style="font-family: monospace; color: white; ">Localtime:</p>
+  <div class="vh20 center-text" style="font-family: monospace; color: white; ">
+    <p>Localtime:</p>
+  </div>
   <div id="txt" class="vh25 center-text" style="font-family: monospace; color: white; "></div>
 
 </body>
